menu for small screens not showing fixed

--- a/style.css
+++ b/style.css
@@ -263,11 +263,11 @@ body.header nav{
 }
 .layer a{
     margin-top: 20px;
-    color : #fff;
+    color : black;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background: #fff;
+    background: #f10303;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -286,7 +286,7 @@ body.header nav{
     border: 1px solid #ff004f;
     padding: 14px 50px;
     border-radius: none;
-    color: #fff;
+    color: black;
     transition: background 0.5s;
     text-decoration: none;
     border-radius: 10px;
@@ -321,7 +321,7 @@ body.header nav{
 }
 .social-icons a{
     text-decoration: none;
-    color: grey;
+    color: rgb(101, 70, 212);
     font-size: 30px;
     margin-right: 15px;
     display: inline-block;
@@ -340,12 +340,12 @@ body.header nav{
 }
 form input, form textarea{
     width: 100%;
-    border: 0;
+    border: 2px solid #050505;
     outline: none;
-    background: #262626;
+    background: #d3cccc;
     padding: 15px;
     margin: 15px 0;
-    color: #fff;
+    color: #000000;
     font-size: 18px;
     border-radius: 6px;
 }
@@ -358,18 +358,18 @@ form .btn2{
 .copyright {
     text-align: center;
     padding: 10px 0;
-    color: #fff;
+    color: #000000;
     font-weight: 300;
     font-style: italic;
     width: 100%;
     height: 30px;
     bottom: 0;
     left: 0;
+    margin-top: 20px;
     position: fixed;  /*Ensures it stays at the bottom of the last page */
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow for separation */
 }
 /* css for small screens */
-.fa-solid{
+nav .fa-solid{
     display: none;
 }
 
@@ -384,21 +384,24 @@ form .btn2{
     .header-text h1{
         font-size: 30px;
     }
-    .fa-solid{
+    nav .fa-solid{
         display:block;
         font-size: 24px;
         cursor: pointer;
+        padding-right: 20px;
+
     }
     nav ul{
-        background: #333;
+        background: #92ebd7;
         position: fixed;
         top: 0;
         right: -200px;
-        width: 200px;
-        height: 100vh;
+        width: 120px;
+        height: 350px;
         padding-top: 50px;
         z-index: 2;
         transition: right 0.5s;
+        border-bottom-left-radius: 20px;
     }
     nav ul li{
         display: block;
@@ -407,7 +410,7 @@ form .btn2{
     nav ul .fa-solid{
         position: absolute;
         top: 25px;
-        left: 25px;
+        left: 55px;
         cursor: pointer;
     }
     .sub-title{
@@ -434,8 +437,10 @@ form .btn2{
     }
 }
 #success{
-    color: lightgreen;
-    margin-top: -20px;
+    color: rgb(0, 255, 0);
+    margin-top: 20px;
     display: block;
     text-align: center;
+    font-family: lucida handwriting;
+    font-size: 18px;
 }
